[package]
name = "dicey"
version = "0.1.0"
description = "Dice rolling and dice expression (with a syntax similar to FoundryVTT) parsing library"
authors = ["Schuyler Cebulskie <me@gawdl3y.dev>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Gawdl3y/dicey-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parse"]
parse = ["dep:chumsky"]

[dependencies]
fastrand = "2.0.1"
thiserror = "1.0.57"
chumsky = { version = "1.0.0-alpha.6", optional = true }
