[package]
name = "tyche"
version = "0.1.0"
description = "Dice rolling and dice expression (with a syntax similar to FoundryVTT) parsing library"
authors = ["Schuyler Cebulskie <me@gawdl3y.dev>"]
keywords = ["dice", "d20", "rpg", "dnd", "tabletop"]
categories = [
	"games",
	"game-development",
	"mathematics",
	"parser-implementations",
]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Gawdl3y/tyche-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parse", "fastrand"]
parse = ["dep:chumsky"]
fastrand = ["dep:fastrand"]
build-binary = ["parse", "fastrand", "dep:ariadne"]

[dependencies]
thiserror = "1.0.57"
fastrand = { version = "2.0.1", optional = true }
chumsky = { version = "1.0.0-alpha.7", optional = true, features = ["label"] }
ariadne = { version = "0.4", optional = true }

[[bin]]
name = "tyche"
required-features = ["build-binary"]
