[package]
name = "tyche"
version = "0.3.0"
description = "Dice rolling and dice expression (with a syntax similar to FoundryVTT) parsing library"
authors = ["Schuyler Cebulskie <me@gawdl3y.dev>"]
keywords = ["dice", "d20", "rpg", "dnd", "tabletop"]
categories = [
	"games",
	"game-development",
	"mathematics",
	"parser-implementations",
]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Gawdl3y/tyche-rs"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "parse", "fastrand"]
std = ["thiserror/std", "chumsky?/std", "fastrand?/std"]
parse = ["dep:chumsky"]
fastrand = ["dep:fastrand"]
build-binary = ["std", "parse", "fastrand", "dep:ariadne"]

[dependencies]
thiserror = { version = "2.0.11", default-features = false }
fastrand = { version = "2.3.0", optional = true, default-features = false }
chumsky = { version = "1.0.0-alpha.7", optional = true, default-features = false, features = [
	"label",
	"spill-stack",
] }
ariadne = { version = "0.5", optional = true }
pretty-readme = "0.1.0"

[[bin]]
name = "tyche"
required-features = ["build-binary"]
